--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,35 @@
 apply plugin: 'com.android.application'
-
+def SLVersion = rootProject.ext.supportLibVersion
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
+
+
     defaultConfig {
-        applicationId "com.lwjfork.example"
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
+
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
-    implementation project(':library')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:appcompat-v7:$SLVersion"
+    implementation 'com.lwj.fork:CodeEditText:1.0.0'
+//    implementation project(':CodeEditText')
 }
