--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,51 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    def gradleVersion = "$DEFAULT_GRADLE_VERSION";
+    File propertiesFile = file('local.properties');
+    if (propertiesFile.exists()) {
+        Properties localProperties = new Properties()
+        def stream = project.rootProject.file('local.properties').newDataInputStream()
+        localProperties.load(stream)
+        def localGradleVersion = localProperties.getProperty('LOCAL_GRADLE_VERSION')
+        if (localGradleVersion != null) {
+            gradleVersion = localGradleVersion;
+        }
+
+        stream.close();
+    }
     repositories {
-        google()
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
     }
 }
 
 allprojects {
     repositories {
-        google()
         jcenter()
+        maven {url 'https://dl.bintray.com/lwjfork/maven/'}
+    }
+}
+tasks.withType(Javadoc) {
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet ', 'UTF-8')
+    options{
+        encoding "UTF-8"
+        charSet 'UTF-8'
+        links "http://docs.oracle.com/javase/7/docs/api"
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+ext {
+    compileSdkVersion = 28
+    buildToolsVersion = "26.0.2"
+    minSdkVersion = 14
+    targetSdkVersion = 25
+    supportLibVersion = "25.0.1"
 }
