--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$SLVersion"
-    implementation 'com.lwj.fork:CodeEditText:1.0.2'
+    compile 'com.github.lwjfork:CodeEditText:1.0.3'
+//    implementation 'com.github.lwjfork:CodeEditText:1.0.3'
 //    implementation project(':CodeEditText')
 }
