--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {url 'https://dl.bintray.com/lwjfork/maven/'}
     }
 }
 
