--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    def gradleVersion = "$DEFAULT_GRADLE_VERSION";
-    File propertiesFile = file('local.properties');
+    def gradleVersion = "$DEFAULT_GRADLE_VERSION"
+    File propertiesFile = file('local.properties')
     if (propertiesFile.exists()) {
         Properties localProperties = new Properties()
         def stream = project.rootProject.file('local.properties').newDataInputStream()
         localProperties.load(stream)
         def localGradleVersion = localProperties.getProperty('LOCAL_GRADLE_VERSION')
         if (localGradleVersion != null) {
-            gradleVersion = localGradleVersion;
+            gradleVersion = localGradleVersion
         }
 
         stream.close();
@@ -28,7 +28,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven {url 'https://dl.bintray.com/lwjfork/maven/'}
+//        maven {url 'https://dl.bintray.com/lwjfork/maven/'}
     }
 }
 
