--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,31 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    def gradleVersion = "3.5.3"
-    File propertiesFile = file('local.properties')
-    if (propertiesFile.exists()) {
-        Properties localProperties = new Properties()
-        def stream = project.rootProject.file('local.properties').newDataInputStream()
-        localProperties.load(stream)
-        def localGradleVersion = localProperties.getProperty('LOCAL_GRADLE_VERSION')
-        if (localGradleVersion != null) {
-            gradleVersion = localGradleVersion
-        }
-
-        stream.close();
-    }
+   def kotlin_version = "1.4.30"
     repositories {
+        mavenCentral()
         jcenter()
         google()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradleVersion"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
+        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'io.github.gradle-nexus:publish-plugin:1.1.0'
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.30"
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
         google()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 }
 
@@ -40,3 +37,5 @@ ext {
     targetSdkVersion = 25
     supportLibVersion = "25.0.1"
 }
+
+apply from: "${rootDir}/scripts/publish-root.gradle"
