--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$SLVersion"
-//    implementation 'com.github.lwjfork:CodeEditText:1.0.4'
-    implementation project(':CodeEditText')
+    implementation 'io.github.lwjfork:CodeEditText:1.0.5'
+
 }
