--- a/scripts/publish-root.gradle
+++ b/scripts/publish-root.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'io.github.gradle-nexus.publish-plugin'
 
-ext["signing.keyId"] =  SIGNING_KEY_ID
-ext["signing.password"] = SIGNING_PASSWORD
-ext["signing.secretKeyRingFile"] = SIGNING_SECRET_KEY_RING_FILE
-ext["ossrhUsername"] = OSSRH_USERNAME
-ext["ossrhPassword"] = OSSRH_PASSWORD
+ext["signing.keyId"] =  System.getenv("SIGNING_KEY_ID")
+ext["signing.password"] = System.getenv("SIGNING_PASSWORD")
+ext["signing.secretKeyRingFile"] = System.getenv("SIGNING_SECRET_KEY_RING_FILE")
+ext["ossrhUsername"] = System.getenv("OSSRH_USERNAME")
+ext["ossrhPassword"] = System.getenv("OSSRH_PASSWORD")
 
 
 nexusPublishing {
@@ -12,7 +12,7 @@ nexusPublishing {
         sonatype {  //only for users registered in Sonatype after 24 Feb 2021
             nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
             snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
-            stagingProfileId = STAGING_PRO_FILE_ID
+            stagingProfileId =  System.getenv("SONATYPE_STAGING_PROFILE_ID")
             username = ossrhUsername
             password = ossrhPassword
         }
