--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-   def kotlin_version = "1.4.30"
     repositories {
         mavenCentral()
         google()
@@ -11,9 +10,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.github.gradle-nexus:publish-plugin:1.1.0'
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.30"
     }
 }
 
@@ -36,4 +33,5 @@ ext {
     supportLibVersion = "25.0.1"
 }
 
-apply from: "${rootDir}/scripts/publish-root.gradle"
+
+apply from: "https://raw.githubusercontent.com/lwjfork/scriptlib/master/gradle/publish/maven/publish-root.gradle"
